Skip to content

Xcode: Support for "new build system"

Xcode 10 comes with a "new build system" for which CMake will need updates to keep things working.

I'm opening this as a tracking issue.

CMake's test suite has many failures with Xcode 10. Until it is made to pass and nightly testing put in place we don't officially support Xcode 10's new build system.

EDIT: Progress is stalled on limitations of Xcode's new build system and Apple has not been responsive to reports. See details in discussion below.

Edited by Brad King
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information