Source/cmGlobalXCodeGenerator.cxx
@@ -3466,6 +3466,8 @@ void cmGlobalXCodeGenerator::OutputXCodeWorkspaceSettings(
   if (this->XcodeVersion >= 100) {
     xout.Element("key", "BuildSystemType");
     xout.Element("string", "Original");
+    xout.Element("key", "DisableBuildSystemDeprecationWarning");
+    xout.Element("true");
   }
   if (hasGeneratedSchemes) {
     xout.Element("key",
